--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -2,5 +2,5 @@
     display: flex;
     justify-content: center;
     padding: .5rem auto;
-    border-top: 1px solid #fff;
+    border-top: 1px solid orange;
 }
