--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -5,7 +5,7 @@
     justify-content: space-between;
     padding: 1rem auto;
     align-items: center;
-    border-bottom: 1px solid #fff;
+    border-bottom: 1px solid orange;
     margin: 0 auto;
 }
 h1,ul{
