Add redirects file

--- a/src/routes/styles/cart.module.css
+++ b/src/routes/styles/cart.module.css
@@ -32,6 +32,8 @@
     border-radius: .5rem;
     border-color: orange;
     background-color: transparent;
+    padding: .10rem;
+    text-align: center;
 }
 
 .btn.outline{
