--- a/src/components/ProductCard/ProductCard.module.css
+++ b/src/components/ProductCard/ProductCard.module.css
@@ -30,6 +30,8 @@
     border-radius: .5rem;
     border-color: orange;
     background-color: transparent;
+    padding: .10rem;
+    text-align: center;
 }
 
 .btn.outline{
