--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -2,5 +2,6 @@
     display: flex;
     justify-content: center;
     padding: .5rem auto;
-    border-top: 1px solid orange;
+    margin-top: 2rem;
+   
 }
