--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -5,7 +5,6 @@
     justify-content: space-between;
     padding: 1rem auto;
     align-items: center;
-    border-bottom: 1px solid orange;
     margin: 0 auto;
 }
 h1,ul{
@@ -16,4 +15,7 @@ h1,ul{
     display: flex;
     gap: 2rem;
     list-style-type: none;
+}
+a{
+    color: white
 }
